--- a/data.ipynb
+++ b/data.ipynb
@@ -1539,7 +1539,8 @@
     "        print(f\"    {X.columns[indices[f]]}: {importances[indices[f]]}\")\n",
     "\n",
     "\n",
-    "features_of_model(model)"
+    "features_of_model(model)\n",
+    "#je veux tester mon git"
    ]
   }
  ],
