--- a/object.ipynb
+++ b/object.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import random \n",
-    "import os\n",
+    "from itertools import product\n",
+    "import copy\n",
+    "from tqdm import tqdm\n",
     "def random_data(): \n",
     "    return None\n",
     "def get_domains(data):\n",
@@ -18,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +29,7 @@
     "\tdef generate_random_data(self, variable_data, N=10):\n",
     "\n",
     "\t\tdata = {}\n",
-    "\t\tdata['id'] = range(0, N)\n",
+    "\t\tdata['id'] = range(N)\n",
     "\t\t\n",
     "\t\tfor i, variable in enumerate(variable_data):\n",
     "\t\t\tname = variable['name']\n",
@@ -45,7 +47,8 @@
     "\t\t\t\t\tdata[name]  = np.random.normal(mean, std, N).astype(int)\n",
     "\t\t\t\telif var_type == 'float':\n",
     "\t\t\t\t\tdata[name] = np.random.normal(mean, std, N).round(step)\n",
-    "\t\t\n",
+    "     \n",
+    "\t\tdata['y'] = ['' for _ in range(N)]\n",
     "\t\tdf = pd.DataFrame(data)\n",
     "\t\tdisplay(df)\n",
     "\t\treturn df\n",
@@ -73,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -101,150 +104,106 @@
        "      <th>x1</th>\n",
        "      <th>x2</th>\n",
        "      <th>x3</th>\n",
-       "      <th>x4</th>\n",
-       "      <th>x5</th>\n",
-       "      <th>x6</th>\n",
-       "      <th>x7</th>\n",
-       "      <th>x8</th>\n",
+       "      <th>y</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>50</td>\n",
-       "      <td>20</td>\n",
-       "      <td>75</td>\n",
-       "      <td>39.86</td>\n",
-       "      <td>50.27</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>14</td>\n",
+       "      <td>23</td>\n",
+       "      <td>69</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>50</td>\n",
-       "      <td>21</td>\n",
-       "      <td>75</td>\n",
-       "      <td>39.31</td>\n",
-       "      <td>50.25</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>13</td>\n",
+       "      <td>23</td>\n",
+       "      <td>69</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>49</td>\n",
-       "      <td>20</td>\n",
-       "      <td>75</td>\n",
-       "      <td>41.85</td>\n",
-       "      <td>50.28</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>13</td>\n",
+       "      <td>23</td>\n",
+       "      <td>69</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>49</td>\n",
-       "      <td>21</td>\n",
-       "      <td>75</td>\n",
-       "      <td>39.70</td>\n",
-       "      <td>50.15</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>13</td>\n",
+       "      <td>23</td>\n",
+       "      <td>68</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>51</td>\n",
-       "      <td>20</td>\n",
-       "      <td>75</td>\n",
-       "      <td>40.06</td>\n",
-       "      <td>50.27</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>14</td>\n",
+       "      <td>23</td>\n",
+       "      <td>69</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>5</td>\n",
-       "      <td>50</td>\n",
-       "      <td>22</td>\n",
-       "      <td>75</td>\n",
-       "      <td>39.11</td>\n",
-       "      <td>50.24</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>13</td>\n",
+       "      <td>24</td>\n",
+       "      <td>69</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>6</td>\n",
-       "      <td>50</td>\n",
-       "      <td>21</td>\n",
-       "      <td>76</td>\n",
-       "      <td>39.82</td>\n",
-       "      <td>50.28</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>13</td>\n",
+       "      <td>23</td>\n",
+       "      <td>69</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>7</td>\n",
-       "      <td>49</td>\n",
-       "      <td>21</td>\n",
-       "      <td>76</td>\n",
-       "      <td>39.24</td>\n",
-       "      <td>50.30</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>13</td>\n",
+       "      <td>23</td>\n",
+       "      <td>69</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>8</td>\n",
-       "      <td>50</td>\n",
-       "      <td>21</td>\n",
-       "      <td>75</td>\n",
-       "      <td>39.67</td>\n",
-       "      <td>50.20</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>14</td>\n",
+       "      <td>23</td>\n",
+       "      <td>70</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>9</td>\n",
-       "      <td>50</td>\n",
-       "      <td>20</td>\n",
-       "      <td>75</td>\n",
-       "      <td>38.21</td>\n",
-       "      <td>50.28</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>14</td>\n",
+       "      <td>23</td>\n",
+       "      <td>69</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id  x1  x2  x3     x4     x5     x6     x7     x8\n",
-       "0   0  50  20  75  39.86  50.27  False   True  False\n",
-       "1   1  50  21  75  39.31  50.25  False   True  False\n",
-       "2   2  49  20  75  41.85  50.28  False   True  False\n",
-       "3   3  49  21  75  39.70  50.15  False   True   True\n",
-       "4   4  51  20  75  40.06  50.27   True   True  False\n",
-       "5   5  50  22  75  39.11  50.24   True  False   True\n",
-       "6   6  50  21  76  39.82  50.28  False  False   True\n",
-       "7   7  49  21  76  39.24  50.30  False  False  False\n",
-       "8   8  50  21  75  39.67  50.20  False  False  False\n",
-       "9   9  50  20  75  38.21  50.28  False   True  False"
+       "   id  x1  x2  x3 y\n",
+       "0   0  14  23  69  \n",
+       "1   1  13  23  69  \n",
+       "2   2  13  23  69  \n",
+       "3   3  13  23  68  \n",
+       "4   4  14  23  69  \n",
+       "5   5  13  24  69  \n",
+       "6   6  13  23  69  \n",
+       "7   7  13  23  69  \n",
+       "8   8  14  23  70  \n",
+       "9   9  14  23  69  "
       ]
      },
      "metadata": {},
@@ -516,17 +475,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Cause:\n",
-    "\tdef __init__(self, id1, id2, X, data):\n",
-    "\t\tself.id1 = id1\n",
-    "\t\tself.id2 = id2\n",
+    "class Bifact:\n",
+    "\tdef __init__(self,f, data):\n",
     "\t\tself.data = data\n",
-    "\t\tself.x1, self.x2 = data.get_values(id1, id2, X)\n",
+    "\t\tself.f = f\n",
     "\t\n",
+    "\tdef AC1(self, id, X, y):\n",
+    "\t#ligne existe, la décision est bonne et toutes les variables de X ont les bonnes valeurs aussi\n",
+    "\t\tdf = self.data.data\n",
+    "\t\tligne = df[df.id == id].copy()\n",
+    "\t\treturn len(ligne) == 1 and  ligne.y.iloc[0] == y and all((str(ligne.loc[:, [a]].iloc[0, 0]) == str(X[a])) for a in X)\n",
+    "\n",
+    "\n",
+    "\tdef AC2(self, id, X, y):\n",
+    "\t\tdf=self.data.data\n",
+    "\t\tligne=df[df.id==id].copy()\n",
+    "\t\tif (len(ligne)==0):\n",
+    "\t\t\treturn False\n",
+    "\t\tvals=ligne.iloc[0].to_dict()\n",
+    "\t\tX_var=list(X.keys())\n",
+    "\n",
+    "\t\tvariable_domains = self.data.get_domains()\n",
+    "\n",
+    "\t\tdef subdict_combinations(dictionary):\n",
+    "\t\t\tif not dictionary:\n",
+    "\t\t\t\treturn [{}]\n",
+    "\n",
+    "\t\t\tkey = next(iter(dictionary))\n",
+    "\t\t\trest = dictionary.copy()\n",
+    "\t\t\tdel rest[key]\n",
+    "\n",
+    "\t\t\tsubcombos = subdict_combinations(rest)\n",
+    "\t\t\tresult = []\n",
+    "\t\t\tfor subcombo in subcombos:\n",
+    "\t\t\t\tresult.append(subcombo)\n",
+    "\t\t\t\twith_key = {key: dictionary[key]}\n",
+    "\t\t\t\tresult.append({**with_key, **subcombo})\n",
+    "\t\t\treturn result\n",
+    "\n",
+    "\t\tdef generate_combinations(X, variable_domains):\n",
+    "\t\t\t# Générer toutes les combinaisons possibles de valeurs pour les clés de X_var\n",
+    "\t\t\tcombinations = product(*[variable_domains[var] for var in X])\n",
+    "\n",
+    "\t\t\t# Exclure la combinaison identique à X\n",
+    "\t\t\treturn [combination for combination in combinations if combination != tuple(X.values())]\n",
+    "\n",
+    "\t\tcombinations = generate_combinations(X, variable_domains)\n",
+    "\n",
+    "\t\tsub=subdict_combinations(X)\n",
+    "\t\tfor subX in sub:\n",
+    "\t\t\tif len(subX):\n",
+    "\t\t\t\tX_var=list(subX.keys())\n",
+    "\t\t\t\tvals=ligne.iloc[0].to_dict()\n",
+    "\t\t\t\tcombinations = generate_combinations(subX, variable_domains)\n",
+    "\t\t\t\t# Vérifier chaque combinaison\n",
+    "\t\t\t\tfor combination in combinations:\n",
+    "\t\t\t\t\tx_prime = dict(zip(X_var, combination))\n",
+    "\t\t\t\t\tfor k in x_prime.keys():\n",
+    "\t\t\t\t\t\tvals[k]=x_prime[k]\n",
+    "\t\t\t\t\tyhat=self.f(**{k: v for k, v in vals.items() if k in self.data.V()})\n",
+    "\n",
+    "\t\t\t\t\tif yhat!=y and len(x_prime)==len(X):\n",
+    "\t\t\t\t\t\tprint(\"AC2 et AC3 est vérifié pour une affectation x_prime:\",x_prime, \" la decision est :\", yhat)\n",
+    "\t\t\t\t\t\treturn True\n",
+    "\t\t\t\t\telif yhat!=y:\n",
+    "\t\t\t\t\t\tprint(\"Erreur : AC2 et AC3 est vérifié pour une affectation x_prime :\", x_prime, \" la decision est :\", yhat)\n",
+    "\t\t\t\t\t\treturn False\n",
+    "  \n",
+    "\t\tprint(\"Erreur : AC2 n'est pas vérifiée, veuillez saisir un superset de l'ensemble des variables sélectionné\")\n",
+    "\t\treturn False\n",
+    "#ca ameliore les cas où AC3 n'est pas vérifié tout en ayant une meme complexité dans le cas où AC2 et AC3 sont verifiés\n",
     "\n",
     "\tdef BC(self):\n",
     "\t\t# le code des BCi\n",
@@ -535,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
