Refactor code to improve performance and readability

--- a/object.ipynb
+++ b/object.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,23 +39,47 @@
     "\t\t\tif var_type == 'boolean':\n",
     "\t\t\t\tdata[name] = [random.choice([False, True]) for _ in range(N)]\n",
     "\t\t\telse:\n",
-    "\t\t\t\tmin_value = int(variable['min'])\n",
-    "\t\t\t\tmax_value = int(variable['max'])\n",
-    "\t\t\t\tmean = np.random.uniform(min_value, max_value)\n",
-    "\t\t\t\tstd = np.random.uniform((max_value-min_value)/2000, (max_value-min_value)/100)\n",
     "\t\t\t\tif var_type=='int':\n",
+    "\t\t\t\t\tmin_value = int(variable['min'])\n",
+    "\t\t\t\t\tmax_value = int(variable['max'])\n",
+    "\t\t\t\t\tmean = np.random.uniform((3*min_value+max_value)/4, (min_value+3*max_value)/4)\n",
+    "\t\t\t\t\tstd = np.random.uniform((max_value-min_value)/200, (max_value-min_value)/10)\n",
     "\t\t\t\t\tdata[name]  = np.random.normal(mean, std, N).astype(int)\n",
     "\t\t\t\telif var_type == 'float':\n",
-    "\t\t\t\t\tdata[name] = np.random.normal(mean, std, N).round(step)\n",
-    "     \n",
+    "\t\t\t\t\tmin_value = float(variable['min'])\n",
+    "\t\t\t\t\tmax_value = float(variable['max'])\n",
+    "\t\t\t\t\tmean = np.random.uniform((3*min_value+max_value)/4, (min_value+3*max_value)/4)\n",
+    "\t\t\t\t\tstd = np.random.uniform((max_value-min_value)/200, (max_value-min_value)/10)\n",
+    "\t\t\t\t\tdata[name] = np.random.normal(mean, std, N).round(step).astype(float)\n",
+    "\t\n",
     "\t\tdata['y'] = ['' for _ in range(N)]\n",
     "\t\tdf = pd.DataFrame(data)\n",
-    "\t\tdisplay(df)\n",
     "\t\treturn df\n",
+    "\t\n",
+    "\tdef extract_domains(self, variable_data):\n",
+    "\t\tdomains = {}\n",
+    "\t\tfor variable in variable_data:\n",
+    "\t\t\tname = variable['name']\n",
+    "\t\t\tvar_type = variable['type']\n",
+    "\t\t\tif var_type == 'boolean':\n",
+    "\t\t\t\tdomains[name] = [True, False]\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tif var_type == 'int':\n",
+    "\t\t\t\t\tmin_value = int(variable['min'])\n",
+    "\t\t\t\t\tmax_value = int(variable['max'])\n",
+    "\t\t\t\t\tdomains[name] = list(range(min_value, max_value+1))\n",
+    "\t\t\t\telif var_type == 'float':\n",
+    "\t\t\t\t\tmin_value = float(variable['min'])\n",
+    "\t\t\t\t\tmax_value = float(variable['max'])\n",
+    "\t\t\t\t\tstep = int(variable['step'])\n",
+    "\t\t\t\t\tstep_value = 10** -step  # Define your step value here\n",
+    "\t\t\t\t\tdomains[name] = np.arange(min_value, max_value, step_value).tolist()\n",
+    "\t\treturn domains\n",
     "\n",
     "\tdef __init__(self, variable_data, N):\n",
     "\t\tself.data = pd.DataFrame(self.generate_random_data(variable_data, N))\n",
-    "\t\tself.__domains = get_domains(self.data)\n",
+    "\t\tself.__domains = self.extract_domains(variable_data)\n",
+    "\n",
     "\n",
     "\tdef get_values(self, id1, id2=None, X=[]):\n",
     "\t\tif id2 is None:\n",
@@ -71,145 +95,21 @@
     "\t\t\t\treturn self.data[self.data.id == id1][X].to_dict(), self.data[self.data.id == id2][X].to_dict()\n",
     "\n",
     "\tdef V(self):\n",
-    "\t\treturn self.__domains.keys()\n"
+    "\t\treturn self.__domains.keys()\n",
+    "\n",
+    "\tdef save(self, file = 'data/data.csv'):\n",
+    "\t\tself.data.to_csv(file, index=False)\n",
+    "\n",
+    "\tdef load(self, file = 'data/data.csv'):\n",
+    "\t\tself.data = pd.read_csv(file)\n",
+    "\t\tself.__domains = get_domains(self.data)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>x1</th>\n",
-       "      <th>x2</th>\n",
-       "      <th>x3</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>14</td>\n",
-       "      <td>23</td>\n",
-       "      <td>69</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>13</td>\n",
-       "      <td>23</td>\n",
-       "      <td>69</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>13</td>\n",
-       "      <td>23</td>\n",
-       "      <td>69</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>13</td>\n",
-       "      <td>23</td>\n",
-       "      <td>68</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>14</td>\n",
-       "      <td>23</td>\n",
-       "      <td>69</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>13</td>\n",
-       "      <td>24</td>\n",
-       "      <td>69</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>13</td>\n",
-       "      <td>23</td>\n",
-       "      <td>69</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>13</td>\n",
-       "      <td>23</td>\n",
-       "      <td>69</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>14</td>\n",
-       "      <td>23</td>\n",
-       "      <td>70</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>14</td>\n",
-       "      <td>23</td>\n",
-       "      <td>69</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id  x1  x2  x3 y\n",
-       "0   0  14  23  69  \n",
-       "1   1  13  23  69  \n",
-       "2   2  13  23  69  \n",
-       "3   3  13  23  68  \n",
-       "4   4  14  23  69  \n",
-       "5   5  13  24  69  \n",
-       "6   6  13  23  69  \n",
-       "7   7  13  23  69  \n",
-       "8   8  14  23  70  \n",
-       "9   9  14  23  69  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "from tkinter import filedialog\n",
@@ -368,6 +268,8 @@
     "\n",
     "\n",
     "def display_data(variable_data, N):\n",
+    "\tglobal id1_entry, id2_entry\n",
+    "\t\n",
     "\tdata_object = Data(variable_data, N)\n",
     "\tdf = data_object.data\n",
     "\n",
@@ -377,22 +279,38 @@
     "\tframe = tk.Frame(data_window)\n",
     "\tframe.grid(sticky='nsew')\n",
     "\n",
-    "\tv_scrollbar = ttk.Scrollbar(frame, orient=\"vertical\")\n",
-    "\tv_scrollbar.grid(row=0, column=1, sticky='ns')\n",
-    "\th_scrollbar = ttk.Scrollbar(frame, orient=\"horizontal\")\n",
-    "\th_scrollbar.grid(row=1, column=0, sticky='ew')\n",
+    "\tid1_label = tk.Label(frame, text=\"ID1:\")\n",
+    "\tid1_label.grid(row=0, column=0, padx=5, pady=5)\n",
+    "\tid1_entry = tk.Entry(frame)\n",
+    "\tid1_entry.insert(0, \"0\") \n",
+    "\tid1_entry.grid(row=1, column=0, padx=5, pady=5)\n",
     "\n",
-    "\ttable = ttk.Treeview(frame, height=20, columns=[\"Index\"] + [variable['name'] for variable in variable_data],\n",
+    "\tid2_label = tk.Label(frame, text=\"ID2:\")\n",
+    "\tid2_label.grid(row=2, column=0, padx=5, pady=5)\n",
+    "\tid2_entry = tk.Entry(frame)\n",
+    "\tid2_entry.insert(0, \"1\")\n",
+    "\tid2_entry.grid(row=3, column=0, padx=5, pady=5)\n",
+    "\n",
+    "\t# Find a cause button\n",
+    "\tfind_cause_button = tk.Button(frame, text=\"Find a Cause\")\n",
+    "\tfind_cause_button.grid(row=4, column=0, padx=5, pady=5)\n",
+    "\n",
+    "\tv_scrollbar = ttk.Scrollbar(frame, orient=\"vertical\")\n",
+    "\tv_scrollbar.grid(row=5, column=1, sticky='ns')\n",
+    "\th_scrollbar = ttk.Scrollbar(frame, orient=\"horizontal\")\n",
+    "\th_scrollbar.grid(row=7, column=0, sticky='ew')\n",
+    "\n",
+    "\ttable = ttk.Treeview(frame, height=20, columns=[\"Index\"] + [variable['name'] for variable in variable_data]+['y'],\n",
     "\t\t\t\t\t\tyscrollcommand=v_scrollbar.set, xscrollcommand=h_scrollbar.set, show=\"headings\")\n",
-    "\ttable.grid(row=0, column=0, sticky='nsew')\n",
+    "\ttable.grid(row=6, column=0, sticky='nsew')\n",
     "\n",
     "\ttable.heading(\"Index\", text=\"Index\")\n",
-    "\ttable.column(\"Index\", width=100)  # Set column width to 100\n",
+    "\ttable.column(\"Index\", width=100) \n",
     "\n",
-    "\tfor variable in variable_data:\n",
+    "\tfor variable in variable_data +  [{'name': 'y'}]:\n",
     "\t\ttable.heading(variable['name'], text=variable['name'])\n",
-    "\t\ttable.column(variable['name'], width=100)  # Set column width to 100\n",
-    "\n",
+    "\t\ttable.column(variable['name'], width=100) \n",
+    " \n",
     "\tfor index, row in df.iterrows():\n",
     "\t\ttable.insert(\"\", \"end\", values=list(row))\n",
     "\n",
@@ -457,9 +375,6 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "# mon gui principal\n",
     "root = tk.Tk()\n",
     "root.title(\"Bifact\")\n",
@@ -475,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +414,7 @@
     "\t\tvals=ligne.iloc[0].to_dict()\n",
     "\t\tX_var=list(X.keys())\n",
     "\n",
-    "\t\tvariable_domains = self.data.get_domains()\n",
+    "\t\tvariable_domains = self.data.__domains\n",
     "\n",
     "\t\tdef subdict_combinations(dictionary):\n",
     "\t\t\tif not dictionary:\n",
@@ -557,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
