faire le import csv plus tard

--- a/object.ipynb
+++ b/object.ipynb
@@ -665,8 +665,8 @@
     "root.title(\"Bifact\")\n",
     "root.geometry(f\"{WINDOW_WIDTH}x{WINDOW_HEIGHT}\")\n",
     "\n",
-    "import_button = tk.Button(root, text=\"Import a CSV File\", command=import_csv)\n",
-    "import_button.pack()\n",
+    "#import_button = tk.Button(root, text=\"Import a CSV File\", command=import_csv)\n",
+    "#import_button.pack()\n",
     "generate_button = tk.Button(root, text=\"Generate Randomly\", command=generate_random)\n",
     "generate_button.pack()\n",
     "\n",
