Add BC1_4 test case and fix code formatting

--- a/monmaster_amelioree.ipynb
+++ b/monmaster_amelioree.ipynb
@@ -4770,7 +4770,7 @@
         "  return False, None # Cas ou c'est un sous ensemble de X_var qui vérifie BC1_4\n",
         "\n",
         "\n",
-        "c"
+        "BC1_4((\"0001\",\"0004\"), ({\"Logique\":\"1\"}, {\"Logique\":\"0\"}), ('A', 'R'))"
       ]
     },
     {
@@ -5356,12 +5356,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "Md1o9e9HhxGS"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "10\n",
+            "9\n",
+            "8\n",
+            "7\n",
+            "6\n",
+            "5\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n"
+          ]
+        }
+      ],
+      "source": [
+        "for i in range(10,0,-1):\n",
+        "    print(i)"
+      ]
     }
   ],
   "metadata": {
